--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             </a>
         </div>
 
-        <p class="text-[10px] text-center text-gray-600 mt-6">© 2024 UmmahTube Inc. All Rights Reserved.</p>
+        <p class="text-[10px] text-center text-gray-600 mt-6">UmmahTube Inc. All Rights Reserved.</p>
     </div>
 </div>
   <div id="downloadModal" class="modal items-center justify-center p-6">
